[project]
name = "better-echo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "diart>=0.9.2",
    "httpx>=0.27",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "whisperlivekit[cu129]>=0.2.20.post1",
]
